[package]
name = "advent_of_code_2023_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
home = "0.5"
ndarray = "0.15"
num-derive = "0.4"
num-integer = "0.1"
num-traits = "0.2"
regex = "1.10"
